Revert fe73fd97e53a9633e234a993bba19afc62c81588